<resources>
    <string name="test">test content 1 2 3 @ $ # ! ?</string>
    <string name="empty"> </string>
    <string name="app_name">NightCrowNotification</string>
    <string name="image_desc">This is a description for a picture</string>
    <string name="copy_right">Copyright © 2023 Huiiro. All Rights Reserved</string>
    <string name="server_provider">Powered by Huiiro</string>

    <string name="copy_desc">锅巴网络 荣誉出品</string>
    <string name="privacy_title">服务条款和隐私协议提示</string>
    <string name="privacy_content">
        <Data><![CDATA[
            <h2>服务条款</h2>
            <p>请认真阅读以下条款内容：</p>
            <p>该版本为内部测试版本，请勿对外宣传！</p>
            <p>软件第一次启动时可能会闪退，重新启动即可！</p>
            <span />
            <p>该版本支持鸦币汇率实时查询，并实时通知。</p>
            <p>软件仅供学习交流，请勿用作违法用途。</p>
            <p>该软件最终解释权归Huiiro所有。</p>
            <h2>隐私条款</h2>
            <p>请认真阅读以下条款内容：</p>
            ]]></Data>
    </string>
    <string name="update_desc">监测到有新版本可用，是否更新？</string>
    <string name="layout_index">首页</string>
    <string name="layout_notice">资讯</string>
    <string name="layout_more">更多</string>
    <string name="layout_settings">设置</string>
    <string name="layout_content">内容</string>
    <string name="layout_title_index">鸦币小助手</string>
    <string name="layout_title_notice">官网资讯</string>
    <string name="layout_title_more">更多功能</string>
    <string name="layout_title_settings">设置管理</string>
    <string name="layout_title_settings_account">账号管理</string>
    <string name="layout_title_settings_basic">基本功能</string>
    <string name="layout_title_settings_advanced">高级功能</string>
    <string name="layout_title_settings_update_log">更新日志</string>
    <string name="layout_title_settings_thanks">鸣谢</string>

    <string name="layout_index_fn_1_build_crow">铸造鸦币</string>
    <string name="layout_index_fn_2_crow_token">游戏货币</string>
    <string name="layout_index_fn_3_digital_token">数字货币</string>

    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="sign_up">注册</string>
    <string name="login_or_register">登录或注册</string>
    <string name="experience">开始体验</string>

    <string name="agree">同意</string>
    <string name="disagree_exit">不同意并退出</string>
    <string name="agree_update">更新</string>
    <string name="disagree_update">暂不更新</string>

    <string name="defaultVolume">0.0</string>
    <string name="defaultTime">00:00:00</string>
    <string name="maxVolume">最大值</string>
    <string name="minVolume">最小值</string>
    <string name="avgVolume">平均值</string>
    <string name="count_time">统计时间</string>
    <string name="update_time">更新时间</string>
    <string name="game_crow_price">游戏内实时币价：</string>
    <string name="day_crow_price">24小时内实时币价：</string>
    <string name="hour_crow_price">1小时内实时币价：</string>
    <string name="hour_wemix_price">1小时内币价变化：</string>
    <string name="day_wemix_price">1日内币价变化：</string>
    <string name="week_wemix_price">1周内币价变化：</string>
    <string name="month_wemix_price">1月内币价变化：</string>
    <string name="year_wemix_price">1年内币价变化：</string>
    <string name="line_chat_crow">单日币价走势图：</string>
    <string name="bar_chat_crow">单日成交量走势图：</string>
    <string name="crow_detail_history">历史数据（只展示前100条数据）：</string>
    <string name="crow_warning_history">历史可成交数据（只展示前10条数据）：</string>
    <string name="wemix_price">WEMIX币价：</string>
    <string name="wemix_volume">持有数量：</string>
    <string name="wemix_volume_change">持有变动：</string>
    <string name="wemix_price_change">价格变动：</string>
    <string name="wemix_price_liquidity">资金流动：</string>

    <string name="crow_warning_title">来自系统提示：</string>
    <string name="crow_warning_text">检测到游戏内实时币价大于0.75，请合理安排铸币！</string>
    <string name="crow_warning_close_once">关闭一次</string>
    <string name="crow_warning_close_forever">不再提醒</string>

    <string name="crow">CROW</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="volume">Volume</string>
    <string name="volume_crow">Volume(CROW)</string>

    <string name="fn_btn_enable_notification">开启通知</string>
    <string name="fn_btn_check_update">检查更新</string>
    <string name="fn_btn_clear_cache">清理缓存</string>
    <string name="fn_btn_set_alarm">设置提醒铃声</string>
    <string name="fn_btn_read_log">查看运行日志</string>
    <string name="current_version">当前版本：1.0.0</string>
    <string name="thank_inc">锅巴网络  Huiiro All Rights Reserved.</string>
    <string name="thank_law">项目仅供学习参考，请勿用作违法用途！</string>
    <string name="thank_project_url">
       <Data><![CDATA[
         <a href="https://github.com/1659009445/nightCrowNotification">Github</a>
            ]]></Data>
    </string>
    <string name="thank_licence"> 本项目遵循GPLv3协议并且开源在</string>
    <string name="update_project_desc">查看更新日志内容：</string>
    <string name="update_project_url">
         <Data><![CDATA[
         <a href="https://www.huiiro.com/page/ncnDownload">Huiiro</a>
            ]]></Data></string>
    <string name="view_original">查看原文</string>
    <string name="view_prev">&lt; 上一篇</string>
    <string name="view_next">下一篇 &gt;</string>
    <string name="back">&lt;返回</string>
</resources>