<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/res_logo_gb_wp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/res_logo_huiiro_full_wp" />

    <TextView
        android:id="@+id/copy_desc"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/copy_desc"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/copy_right"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/server_provider"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/server_provider"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="13sp" />

</RelativeLayout>