<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shader_light"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!--货币游戏内实时价格-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/wemix_price"
            android:textColor="@color/deep_grey_2"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/res_pic_token_wemix" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/defaultVolume"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
