<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/content_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/res_pic_token_crow" />

        <View
            android:layout_width="12dp"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/crow"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/crow"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/price_close_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crow"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_changed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:text="@string/crow"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/price_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crow"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crow"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crow"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="30dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_crow"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/volumeCrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crow"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />


</LinearLayout>